# embeddedsysP2G

./: CMakeLists.txt  FreeRTOS_Kernel_import.cmake  README.md
Buddy1_WIFI/: CMakeLists.txt  UpdatedAccelerometer.c  rtos_car.c  rtos_remote.c  test_car.c  test_dashboard.c  test_remote.c  udp_car.c  udp_dashboard.c  udp_remote.c
Buddy1_WIFI/communication/: CMakeLists.txt
Buddy1_WIFI/communication/client_communication/: client_communication.c  client_communication.h
Buddy1_WIFI/communication/server_communication/: server_communication.c  server_communication.h
Buddy1_WIFI/communication/udp_client_communication/: udp_client_communication.h
Buddy1_WIFI/communication/udp_server_communication/: udp_server_communication.h
Buddy1_WIFI/communication/wifi_communication/: wifi_communication.c  wifi_communication.h
Buddy1_WIFI/tcp_client/: CMakeLists.txt  car_tcp_client.uf2  tcp_client.c
Buddy1_WIFI/tcp_server/: CMakeLists.txt
Buddy1_WIFI/test_server/: app.js
Buddy2/: CMakeLists.txt  motor_control.c  motor_control.uf2
Buddy3/: CMakeLists.txt
Buddy3_IR_Line/: irsensor.c  irsensor.uf2
Buddy4/: AccelerometerSeanLee.c  AccelerometerSeanLee.uf2  AccelerometerUpdate.c  AccelerometerUpdate.uf2  CMakeLists.txt  UpdatedAccelerometer.c  UpdatedAccelerometer.uf2
Buddy4/communication/: CMakeLists.txt
Buddy4/communication/client_communication/: client_communication.c
Buddy4/communication/server_communication/: CMakeLists.txt
Buddy4/communication/wifi_communication/: wifi_communication.c  wifi_communication.h
Buddy5/: CMakeLists.txt  ir-wheelencoder.c  ultrasonic_sensor.c
RTOS_integration/: CMakeLists.txt  FreeRTOSConfig.h  RTOS_integration.uf2  motor_control.c  motor_control.uf2  ultrasonic.c  ultrasonic.h  wheel_encoder.c
RTOS_xh/: CMakeLists.txt  irline_following.c  irline_following.h  motor_control.c  motor_control.h  ultrasonic.c  ultrasonic.h  wheel_encoder.c  wheel_encoder.h
RTOS_xh/communication/server_communication/: server_communication.c
RTOS_xh/communication/udp_client_communication/: udp_client_communication.c
RTOS_xh/communication/udp_server_communication/: udp_server_communication.c
RTOS_zx/: CMakeLists.txt  motor_control.c  wheel_encoder.h
communication/client_communication/: CMakeLists.txt
communication/server_communication/: server_communication.c
communication/udp_client_communication/: CMakeLists.txt  udp_client_communication.c
communication/udp_server_communication/: CMakeLists.txt
communication/wifi_communication/: CMakeLists.txt
zx-rtos-style/: CMakeLists.txt  motor_control.c  ultrasonic.c  ultrasonic.h  wheel_encoder.c  wheel_encoder.h
